--- a/_config.yml
+++ b/_config.yml
@@ -113,8 +113,8 @@ analytics:
 author:
   name             : "박노아"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "단국대학교에 재학중인 32211599 박노아입니다"
+  location         : #"Somewhere"
   email            :
   links:
     - label: "Email"
